# tenjin

./: .gitignore  .pytest.toml  AGENTS.md  LICENSE.md  README.md
.github/workflows/: nrsr.yaml  rebuildcontainer.yml
c2rust/: .gitignore  .gitrepo
c2rust/c2rust/: Cargo.toml
c2rust/c2rust-ast-builder/src/: builder.rs
c2rust/c2rust-ast-exporter/src/: AstExporter.cpp  lib.rs
c2rust/c2rust-rust-tools/src/: lib.rs
c2rust/c2rust-transpile/: Cargo.toml
c2rust/c2rust-transpile/src/: convert_type.rs  lib.rs  renamer.rs
c2rust/c2rust-transpile/tests/: snapshots.rs
cli/: autoblocked_macro_names_in_translation.txt  autoincluded_tenjin_decls.h  batching_rewriter.py  c_refact.py  c_refact_arglifter.py  c_refact_decl_splitter.py  c_refact_identify_mains.py  c_refact_tag_hoister.py  c_refact_type_mod_replicator.py  cindex_helpers.py  cli_subcommands.py  codehawk.py  compilation_database.py  constants.py  fixup_rs_mod_collision.py  guidance.py  hermetic.py  intercept_exec.py  llvm_bitcode_linking.py  main.py  provisioning.py  pyproject.toml  speculative_rewriters.py  static_measurements_rust.py  ta3_test_runner.py  targets.py  targets_from_intercept.py  tenj_types.py  testing.py  translation.py  translation_improvement.py  translation_multi_config.py  translation_preparation.py  translation_types.py  vcs_helpers.py
cli/sh/cc-ld-intercept/: ar
docs/: README.md  USE.md
docs/passes/: aliased_arguments.md  convert_union_bitcasts.md  errno_localization.md  mutable_global_localization.md  pointer_arithmetic_reduction.md  refold_and_revert.md  slice_signature_reshaping.md
tests/: 10j_pytest_fixtures.py  README.md  conftest.py  ptr_slice_fixture_harness.py  tenjin_pytest_helpers.py  test_batching_rewriter.py  test_c_refact.py  test_clang_cindex.py  test_fixup_rs_mod_collision.py  test_pointer_transform.py  test_slice_transform.py  test_targets.py  test_third_party.py  test_tractor_corpus.py
tests/errno/: test_errno_analysis.py
tests/errno/basic/: basic.c
tests/errno/fpointers/: neg.c  pos.c
tests/guidance/: test_guidance.py
tests/pointer_transform/: pointer_transform_utils.py  test_pointer_transform.py  test_slice_transform.py
tests/pointer_transform_cases/get_bits/: expected_metadata.json
tests/pointer_transform_cases/nonconst_bound/: expected_metadata.json
tests/pointer_transform_cases/strchr_wrapper/: expected_metadata.json
tests/regression_tests/: test_regression_tests.py
tests/regression_tests/errno_global/: main.c
tests/regression_tests/time_coercion/: main.c
tests/slice_transform_cases/callgraph_propagation/: expected_metadata.json  expected_slice_metadata.json
tests/slice_transform_cases/global_return/: expected_metadata.json  expected_slice_metadata.json
tests/slice_transform_cases/header_fwd_decl/: expected_metadata.json  expected_slice_metadata.json
tests/slice_transform_cases/lo_hi_quicksort/: expected_metadata.json
tests/slice_transform_cases/lookaround/: expected_metadata.json  expected_slice_metadata.json
tests/slice_transform_cases/ptr_len_root/: expected_metadata.json  expected_slice_metadata.json
tests/slice_transform_cases/return_index/: expected_metadata.json  expected_slice_metadata.json
tests/smoke_tests/: test_0.py  test_smoketests.py
tests/snapshotted/: test_snapshotted.py
tests/snapshotted/assorted_guidance/_xj_snapshot/00_out/: Cargo.toml
tests/snapshotted/assorted_guidance/_xj_snapshot/00_out/src/: assorted_guidance.rs
tests/snapshotted/pointer_param_reseat/_xj_snapshot/final/pointer_param_reseat/: Cargo.toml  rust-toolchain.toml
tests/snapshotted/pointer_param_reseat/_xj_snapshot/final/pointer_param_reseat/src/: pointer_param_reseat.rs
xj-improve-lift-call-args/: Cargo.toml  original_spec.md  rust-toolchain.toml
xj-improve-lift-call-args/src/: access.rs  analysis.rs  emit.rs  lib.rs  lift.rs  main.rs  text_edit.rs
xj-improve-lift-call-args/tests/: algorithm.rs
xj-improve-multitool/: Cargo.toml
xj-improve-multitool/src/: extract_graph.rs  lib.rs  span_eraser.rs
xj-improve-relink/: Cargo.toml
xj-improve-relink/src/: collect.rs  lib.rs  main.rs  manifest.rs  relink.rs
xj-improve-relink/tests/: snapshots.rs
xj-improve-synsub/: Cargo.toml
xj-improve-synsub/src/: lib.rs  main.rs  rewrites.rs
xj-improve-synsub/tests/: snapshots.rs
xj-localize-errno/: CMakeLists.txt  FindExternal.cpp  FindExternal.h  LocalizeErrno.cpp  LocalizeErrnoASTVisitor.cpp  LocalizeErrnoASTVisitor.h  README.md  StdlibCallCollector.cpp  StdlibCallCollector.h  StdlibSpec.cpp  StdlibSpec.h
xj-localize-errno/tests/assign/: CMakeLists.txt
xj-localize-errno/tests/assign/include/: bar.h  bar.h.errno
xj-localize-errno/tests/assign/src/: assign.c  assign.c.errno
xj-localize-errno/tests/fpointers/: main.c
xj-prepare-allocmotion/: AllocMotion.cpp  AllocMotion.h  AllocMotionAction.cpp  AllocMotionAction.h  CMakeLists.txt  main.cpp
xj-prepare-allocmotion/tests/: README.md  negative_addr_of_field.c  negative_aliased.c  negative_partial_init.c  negative_use_before_init.c  positive_calloc_compound.c  positive_decl_at_site.c  positive_separate_decl.c  positive_two_allocs.c  run_tests.sh
xj-prepare-findfnptrdecls/: CMakeLists.txt  FindFnPtrDecls.cpp
xj-prepare-pointertransform/: CMakeLists.txt  Common.cpp  Common.h  FunctionAccessAnalyzer.cpp  FunctionAccessAnalyzer.h  PointerAccessCollector.cpp  PointerAccessCollector.h  PointerTransformAction.cpp  PointerTransformAction.h  TransformationMethods.cpp  ValidationMethods.cpp  main.cpp
xj-prepare-printdecllocs/: CMakeLists.txt  HoistEmbeddedTagDefs.cpp  PrintDeclLocs.cpp
xj-prepare-slicetransform/: CMakeLists.txt  SliceDetector.cpp  SliceDetector.h  SliceRewriter.cpp  SliceRewriter.h  SliceTransformAction.cpp  SliceTransformAction.h  main.cpp
xj-prepare-support/: PtrIndexMetadata.cpp  PtrIndexMetadata.h
xj-prepare-unionbitcasts/: CMakeLists.txt  Common.cpp  Common.h  FunctionAccessAnalyzer.cpp  FunctionAccessAnalyzer.h  TransformationMethods.cpp  UnionAccessCollector.cpp  UnionTransformAction.cpp  ValidationMethods.cpp  main.cpp
(+224 files in other folders)
