[package]
name = "xj-improve-lift-call-args"
version = "0.1.0"
edition = "2024"
publish = false

# Rust-analyzer crates are published as ra_ap_* on crates.io. Their releases
# are synchronized; pin every crate to the same version. Bump them together.
#
# If `cargo build` fails because a published API has changed since this
# version, the offending call sites in src/analysis.rs are the only places
# that touch the rust-analyzer surface area.
[dependencies]
ra_ap_base_db        = "=0.0.332"
ra_ap_hir            = "=0.0.332"
ra_ap_hir_def        = "=0.0.332"
ra_ap_hir_ty         = "=0.0.332"
ra_ap_ide            = "=0.0.332"
ra_ap_load-cargo     = "=0.0.332"
ra_ap_paths          = "=0.0.332"
ra_ap_project_model  = "=0.0.332"
ra_ap_syntax         = "=0.0.332"
ra_ap_vfs            = "=0.0.332"

anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
expect-test = "1.5"
