[package]
name = "xj-improve-multitool"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = "=0.15.2-nightly-2026-05-01"
env_logger = {version = "0.10", default-features = false}
clap = {version = "4.4", features = ["derive"]}
serde = {version = "1", features = ["derive"]}
petgraph = "0.8.2"
serde_json = "1.0.140"
