[package]
name = "xj-improve-synsub"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit-mut", "parsing", "printing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
prettyplease = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
