
[package]
name = "tenjinized"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "tenjinized"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
bytemuck = { version = "1.23.2", features = ["derive", "extern_crate_alloc"] }



[profile.release]
strip = "debuginfo"